# is-a-triangle

./: pyproject.toml
pyqt6 project/: Is-a-Triangle.py  demo  pyproject.toml
